[gd_scene load_steps=33 format=2]

[ext_resource path="res://GameElmnts/Foxy.gd" type="Script" id=1]
[ext_resource path="res://img/Poof.png" type="Texture" id=2]
[ext_resource path="res://img/FoxyTail.png" type="Texture" id=3]
[ext_resource path="res://img/Foxy32.png" type="Texture" id=4]
[ext_resource path="res://img/FoxyKnot.png" type="Texture" id=5]
[ext_resource path="res://Sounds/bark.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/walk.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/land.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/hit.wav" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 40 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 32, 40 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "Poof",
"speed": 9.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 11 ) ],
"loop": true,
"name": "Bark",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "Ouch",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 4.5, 5.95181 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 5.5, 5 )

[node name="Foxy" type="KinematicBody2D"]
position = Vector2( 109.887, 144.087 )
z_index = 1
collision_layer = 2
collision_mask = 519
script = ExtResource( 1 )

[node name="Poof" type="AnimatedSprite" parent="."]
position = Vector2( 0.0117798, -0.280663 )
frames = SubResource( 6 )
animation = "Poof"
frame = 4
playing = true

[node name="FoxyTailR" type="Sprite" parent="."]
position = Vector2( -4.596, -1.197 )
texture = ExtResource( 3 )
offset = Vector2( -4, 4 )

[node name="FoxyTailL" type="Sprite" parent="."]
visible = false
position = Vector2( 5.359, -1.166 )
texture = ExtResource( 3 )
offset = Vector2( 4, 4 )
flip_h = true

[node name="FoxySprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.560227, -8.19472 )
frames = SubResource( 19 )
animation = "Bark"
playing = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( -0.387001, 0.0620117 )
shape = SubResource( 20 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.887004, -2.08701 )
current = true
limit_left = 0
limit_top = 0
limit_right = 3200
limit_bottom = 3200
limit_smoothed = true
smoothing_enabled = true

[node name="KnotR" type="Sprite" parent="."]
position = Vector2( -2.5, -1.5 )
texture = ExtResource( 5 )

[node name="KnotL" type="Sprite" parent="."]
visible = false
position = Vector2( 4, -1.5 )
texture = ExtResource( 5 )
flip_h = true

[node name="Bark" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="talk" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="talk"]
position = Vector2( 3.613, -4.08701 )
shape = SubResource( 27 )

[connection signal="frame_changed" from="FoxySprite" to="." method="_on_FoxySprite_frame_changed"]
